added first version of navHeader simple

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,5 +16,14 @@ a {
 }
 
 :root {
-  --main: red;
+  --main: rgb(2, 2, 206);
+  --secondary: rgb(2, 206, 80);
+  --terciary: rgb(2, 152, 206);
+  --danger: rgb(206, 2, 2);
+  --success: rgb(59, 255, 4);
+  --alert: rgb(247, 255, 4);
+
+  --text_main: black;
+  --text_light: white;
+  --text_dark: black;
 }
